[package]
name = "bband-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Bollinger Bands (BBand) implementation In Rust"
repository="https://github.com/immortalinfidel/bband-rs"
homepage="https://github.com/immortalinfidel/bband-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { path = "../ta-common", version = "0.1.0" }
sd-rs= { path = "../sd-rs", version = "0.1.0" }
